# derivatives-pricing-model

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  quotes.csv  requirements.txt
docs/: CLI_REFERENCE.md
examples/calibration/: run_calib.sh
examples/exotics/: run_barrier.sh  run_lookback.sh
examples/hedging/: run_hedge.sh
examples/heston/: reference_params.json  synthetic_heston_quotes.csv
examples/pricing/: run_bs.sh
examples/risk/: portfolio_case.json
scripts/: generate_visualizations_report.py
src/: __init__.py
src/cli/: main.py  parser.py
src/cli/commands/: __init__.py  barrier_price.py  binomial_price.py  bs_price.py  calibrate_heston.py  hedge_sim.py  (+7 more)
src/configs/: __init__.py
src/data_io/: loaders.py
src/derivatives_pricing_model/: __init__.py
src/engines/: __init__.py
src/io/: __init__.py  loaders.py  serializers.py
src/legacy/: __init__.py
src/models/: domain.py
src/reporting/: __init__.py
src/utils/: heston_params.py  logging_config.py  reproducibility.py  validation.py
src/visualization/: __init__.py  plots.py
src/workflows/: base.py  calibration_workflow.py  hedging_workflow.py  historical_vol_workflow.py  pricing_workflow.py  risk_workflow.py  stress_workflow.py
tests/integration/: test_exotic_cli.py  test_heston_calibration_cli.py  test_heston_cli_model_validation.py  test_sigma_optional_heston_cli.py
tests/regression/: __init__.py
tests/unit/: test_calibration.py  test_exotics.py  test_hedging.py  test_heston_and_risk.py  test_heston_calibration.py  test_packaging_and_validation.py  test_pricing.py
(+56 files in other folders)
